--- a/02-amplitude-modulation/code/index.html
+++ b/02-amplitude-modulation/code/index.html
@@ -6,8 +6,20 @@
 <body>
   <button id='start-btn'>Play</button>
   <button id='stop-btn'>Stop</button>
-
-<canvas id="waveform" width ="512" height="256">  </canvas>
+  <div></div>
+  <label for="frequency">frequency : <span id="frequency-value">340</span></label>
+  <div></div>
+  <input type="range" min='0' max='2093' step="10" id="frequency" value="340">
+  <div></div>
+  <label for="harmonicity">harmonicity : <span id="harmonicity-value">0.03</span></label>
+  <div></div>
+  <input type="range" min='0' max='5' step="0.001" id="harmonicity" value="0.03">
+  <div></div>
+  <label for="modulationScale">modulationScale : <span id="modulationScale-value">0.5</span></label>
+  <div></div>
+  <input type="range" min='0' max='1' step="0.01" id="modulationScale" value="0.5">
+  <div></div>
+  <canvas id="waveform" width ="512" height="512">  </canvas>
 <script type="text/javascript" src="./app.js"></script>
 </body>
 </html>
