add deduction of fm spectrum

--- a/03-frequency-modulation/assets/math.html
+++ b/03-frequency-modulation/assets/math.html
@@ -25,8 +25,8 @@
     $$= J_0(K) + 2i\sum_{α=0}^{+\infty}J_{2α+1}(K)sin((2α+1)θ) + 2\sum_{α=1}^{+\infty}J_{2α}(K)cos(2αθ)$$
     $$e^{iKsin(θ)} = cos(Ksin(θ)) + isin(Ksin(θ))$$
 
-    $$cos(Ksin(θ)) = J_0(K) + \sum_{α=1}^{+\infty}J_{2α}(K)cos(2αθ)$$
-    $$sin(Ksin(θ)) = 2\sum_{α=0}^{+\infty}J_{2α+1}(K)sin((2α+1)θ$$
+    $$cos(Ksin(θ)) = J_0(K) + 2\sum_{α=1}^{+\infty}J_{2α}(K)cos(2αθ)$$
+    $$sin(Ksin(θ)) = 2\sum_{α=0}^{+\infty}J_{2α+1}(K)sin((2α+1)θ)$$
     <!-- $$\sum_{i=0}^{+\infty} \frac{1}{i^2}$$ -->
 
     $$cos(2πf_ct)cos(Ksin(2πf_mt)) = J_0(K)cos(2πf_ct) + \sum_{α=1}^{+\infty}J_{2α}(K)(cos(2π(f_c-2αf_m)t) + cos(2π(f_c+2αf_m)t))$$
